Fixing the title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,21 @@
 body {
     padding: 2rem;
 }
+
+.even-bigger {
+    font-size: 3.5rem;
+}
+
+.margin-box {
+    margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+    .flex-column-mobile {
+      flex-direction: column;
+
+    }
+    .even-bigger {
+        font-size: 2.4rem;
+    }
+  }
